@@ -1739,6 +1739,47 @@ stopifnot(identical(x, "foo"))
 rm(quote, foo, x)
 
 
+## Subassigning multiple new data.frame columns (with specified row), PR#15362, 17504
+z0 <- z1 <- data.frame(a=1, s=1)
+z0[2, c("a","r","e")] <- data.frame(a=1, r=8, e=9)
+z1[2, "r"] <- data.frame(r=8)
+x <- x0 <- data.frame(a=1:3, s=1:3)
+x[2, 3:4] <- data.frame(r=8, e=9)
+stopifnot(exprs = {
+    identical(z0, data.frame(a = c(1, 1), s = c(1, NA), r = c(NA, 8), e = c(NA, 9)))
+    identical(z1, data.frame(a = c(1,NA), s = c(1, NA), r = c(NA, 8)))
+    identical(x, cbind(x0,
+                       data.frame(r = c(NA, 8, NA), e = c(NA, 9, NA))))
+})
+d0 <- d1 <- d2 <- d3 <- d4 <- d5 <- d6 <- d7 <- data.frame(n=1:4)
+##
+d0[, 2] <- c2 <- 5:8
+d0[, 3] <- c3 <- 9:12
+d1[, 2:3] <- list(c2, c3)
+d2[  2:3] <- list(c2, c3)
+d3[TRUE, 2] <- c2 ; d3[TRUE, 3] <- c3
+d4[TRUE, 2:3] <- list(c2, c3)
+d5[1:4,  2:3] <- list(c2, c3)
+d6[TRUE, 1:2] <- list(c2, c3)
+d7[    , 1:2] <- list(c2, c3)
+stopifnot(exprs = {
+    identical(d0, d1)
+    identical(d0, d2)
+    identical(d0, d3)
+    identical(d0, d4)
+    identical(d0, d5)
+    ##
+    identical(d6, d7)
+    identical(d6, structure(list(n = c2, V2 = c3),
+                            row.names = c(NA, -4L), class = "data.frame"))
+})
+## d4, d5 --> 'Error in `*tmp*`[[j]] : subscript out of bounds'
+## d6     --> 'Error in x[[j]] <- `*vtmp*` :
+##				more elements supplied than there are to replace
+## in R <= 3.5.1
+
+
+
 ## keep at end
 rbind(last =  proc.time() - .pt,
       total = proc.time())
